--- a/bundler/Rakefile
+++ b/bundler/Rakefile
@@ -248,9 +248,7 @@ task :override_version do
   next unless version = ENV["BUNDLER_SPEC_SUB_VERSION"]
   version_file = File.expand_path("../lib/bundler/version.rb", __FILE__)
   contents = File.read(version_file)
-  unless contents.sub!(/(^\s+VERSION\s*=\s*)"#{Gem::Version::VERSION_PATTERN}"/, %(\\1"#{version}"))
-    abort("Failed to change bundler version")
-  end
+  contents.sub!(/(^\s+VERSION\s*=\s*)"#{Gem::Version::VERSION_PATTERN}"/, %(\\1"#{version}"))
   File.open(version_file, "w") {|f| f << contents }
 end
 
